14th version finished busters page

--- a/app/assets/stylesheets/busters.scss
+++ b/app/assets/stylesheets/busters.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the busters controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// 11-11-2015 Cat Add CSS
+.fa-heartbeat {
+  color: #29ABE2;
+}
