--- a/app/views/blogs/index_blog.html.erb
+++ b/app/views/blogs/index_blog.html.erb
@@ -53,12 +53,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h4>Blog left image</h4>
+                        <h4>Blog about Busters and Geeks</h4>
                     </div>
                     <div class="col-sm-6 hidden-xs text-right">
                         <ol class="breadcrumb">
                             <li><a href="index.html">Home</a></li>
-                            <li>blog left img</li>
+                            <li>blog</li>
                         </ol>
                     </div>
                 </div>
@@ -83,13 +83,15 @@
                             </div>
                             <div class="col-md-6 margin20">
                                 <ul class="list-inline post-detail">
-                                    <li>by <a href="#">assan</a></li>
-                                    <li><i class="fa fa-calendar"></i> 31st july 2014</li>
-                                    <li><i class="fa fa-tag"></i> <a href="#">Sports</a></li>
+                                    <li>by <a href="#">Caroline</a></li>
+                                    <li><i class="fa fa-calendar"></i> 11st Nov 2015</li>
+                                    <li><i class="fa fa-tag"></i> <a href="#">Product</a></li>
                                 </ul>
-                                <h2><a href="#">Lorem ipsum dollor sit amet</a></h2>
+                                <h2><a href="#">Crowd-geo Product Design</a></h2>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis.
+                                    Pellentesque cursus arcu id magna euismod in elementum purus molestie
+
                                 </p>
                                 <p><a href="blog-single.html" class="btn btn-theme-dark">Read More...</a></p>
                             </div>
@@ -110,11 +112,11 @@
                             </div>
                             <div class="col-md-6 margin20">
                                 <ul class="list-inline post-detail">
-                                    <li>by <a href="#">assan</a></li>
-                                    <li><i class="fa fa-calendar"></i> 31st july 2014</li>
-                                    <li><i class="fa fa-tag"></i> <a href="#">Sports</a></li>
+                                    <li>by <a href="#">David</a></li>
+                                    <li><i class="fa fa-calendar"></i> 11st Nov 2015</li>
+                                    <li><i class="fa fa-tag"></i> <a href="#">Quality</a></li>
                                 </ul>
-                                <h2><a href="#">Lorem ipsum dollor sit amet</a></h2>
+                                <h2><a href="#">Result-based crowd busting</a></h2>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie
                                 </p>
@@ -141,7 +143,7 @@
                                     <li><i class="fa fa-calendar"></i> 31st july 2014</li>
                                     <li><i class="fa fa-tag"></i> <a href="#">Sports</a></li>
                                 </ul>
-                                <h2><a href="#">Lorem ipsum dollor sit amet</a></h2>
+                                <h2><a href="#">Embrace Users' Voice</a></h2>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie
                                 </p>
@@ -168,7 +170,7 @@
                                     <li><i class="fa fa-calendar"></i> 31st july 2014</li>
                                     <li><i class="fa fa-tag"></i> <a href="#">Sports</a></li>
                                 </ul>
-                                <h2><a href="#">Lorem ipsum dollor sit amet</a></h2>
+                                <h2><a href="#">Win in the mobile security</a></h2>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie
                                 </p>
