--- a/app/views/contacts/index_contact.html.erb
+++ b/app/views/contacts/index_contact.html.erb
@@ -72,7 +72,7 @@
                 <div class="col-md-8 margin30">
                     <h3 class="heading">Contact us</h3>
                     <p>
-                        Duis vitae imperdiet ipsum. Vestibulum ullamcorper lorem at orci vulputate, volutpat tempus magna elementum. Nam in odio sem. Morbi in justo interdum massa tristique lobortis in quis diam. Etiam erat urna, cursus eu ante quis, aliquam venenatis augue. Cras turpis justo, pellentesque eu hendrerit et, euismod vitae leo. Ut in lorem lobortis, gravida quam eget, pulvinar quam. Nam ut leo leo.
+                       Bugsters is a result-based Crowd Busting platform based in Sydney, Australia. <br>Bugsters believes everybody is a natural creative product busters and provides exceptional value to help perfect the products. We have 1000+ users around the world and provides services internationally.
                     </p>
                     <div class="divide30"></div>
                     <div class="form-contact">
@@ -131,10 +131,10 @@
                 <div class="col-md-4">
                     <h3 class="heading">Contact info</h3>
                     <ul class="list-unstyled contact contact-info">
-                        <li><p><strong><i class="fa fa-map-marker"></i> Address:</strong> vaisahali, jaipur, 302012</p></li>
-                        <li><p><strong><i class="fa fa-envelope"></i> Mail Us:</strong> <a href="#">Support@designmylife.com</a></p></li>
-                        <li> <p><strong><i class="fa fa-phone"></i> Phone:</strong> +91 1800 2345 2132</p></li>
-                        <li> <p><strong><i class="fa fa-print"></i> Fax:</strong> +91 2345 2132</p></li>
+                        <li><p><strong><i class="fa fa-map-marker"></i> Address:</strong> 11 Rawsone Place, Sydney, NSW, 2000</p></li>
+                        <li><p><strong><i class="fa fa-envelope"></i> Mail Us:</strong> <a href="#">Support@bugsters.com</a></p></li>
+                        <li> <p><strong><i class="fa fa-phone"></i> Phone:</strong> +61 49 766 7525</p></li>
+                        <li> <p><strong><i class="fa fa-print"></i> Fax:</strong> +61 49 766 7525</p></li>
                     </ul>
                     <div class="divide40"></div>
                     <h4>Get social</h4>
@@ -142,8 +142,8 @@
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
