--- a/app/views/techexperts/index_techexpert_backup.html
+++ b/app/views/techexperts/index_techexpert_backup.html
@@ -169,6 +169,67 @@
         </div><!--.container-->
         <div class="divide60"></div>
 
+
+        <!-- 10-11-2015 Cat Addition 2nd Version of our service -->
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading">Our Services</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 margin20">
+                    <div class="services-box wow animated fadeInUp" data-wow-delay="0.1s">
+                        <div class="services-box-icon">
+                            <i class="fa fa-users"></i>
+                        </div><!--services icon-->
+                        <div class="services-box-info">
+                            <h4>Fix the Knotty Bugs &amp; Problems</h4>
+                            <p>
+                              Our Technical Experts can help you to solve the knotty technical problems or fix the intractable bugs.
+                            </p>
+                        </div>
+                    </div><!--services box-->
+                </div><!--services col-->
+                <div class="col-md-4 margin20">
+                    <div class="services-box wow animated fadeInUp" data-wow-delay="0.2s">
+                        <div class="services-box-icon">
+                            <i class="fa fa-globe"></i>
+                        </div><!--services icon-->
+                        <div class="services-box-info">
+                            <h4>Advise Radical Technical Strategy</h4>
+                            <p>
+                              Whatever in which country, you can get insightful leading tech strategy advise through the world's tech consultants. <br>
+                              If you want to design a Clean &amp; valid technical architecture design to get success in the first step. Access the Top Technical Experts to help your business design a clean & valid technical architecture design.
+                            </p>
+                        </div>
+                    </div><!--services box-->
+                </div><!--services col-->
+                <div class="col-md-4 margin20">
+                    <div class="services-box wow animated fadeInUp" data-wow-delay="0.3s">
+                        <div class="services-box-icon">
+                            <i class="fa fa-crop"></i>
+                        </div><!--services icon-->
+                        <div class="services-box-info">
+                            <h4>Control Product Risks</h4>
+                            <p>
+                              Bugsters helps enterprise to analyze product defects data across crowd platforms which provided by the users around the world; through the data analysis, helps business to control the future risks.
+                            </p>
+                        </div>
+                    </div><!--services box-->
+                </div><!--services col-->
+            </div><!--services row-->
+            <div class="divide30"></div>
+
+            <!--End of Cat Remove to keep business model lean-->
+
+        </div><!--.container-->
+        <div class="divide60"></div>
+
+
+        <!-- End of Cat Addition 2nd Version of our services-->
+
         <div class="container">
 
             <div class="row">
@@ -197,7 +258,7 @@
                             Caroline has been consulting in the world-leading technical advisory company HP, Ernst & Young. Her Specilists include: SAP, CRM, FinTech, Digitalmedia.
                         </p>
                         <ul class="list-inline social-1">
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul><!--social-->
@@ -227,7 +288,7 @@
                             David graduated from the prestigious university Oxford as a mathmatics talent. He has been doing big data analysis over 20 years.
                         </p>
                         <ul class="list-inline social-1">
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul><!--social-->
@@ -256,9 +317,9 @@
                             Caroline has been consulting in the world-leading technical advisory company HP, Ernst & Young. Her Specilists include: SAP, CRM, FinTech, Digitalmedia.
                         </p>
                         <ul class="list-inline social-1">
-                          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul><!--social-->
                         <!--Caroline Add button book an expert-->
                         <div class="divide30"></div>
@@ -285,7 +346,7 @@
                             David is a mathmatics talent. He graduated from Oxford University major in mathmatics. He has been doing big data analysis over 20 years.
                         </p>
                         <ul class="list-inline social-1">
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul><!--social-->
@@ -317,7 +378,7 @@
                             Caroline has been consulting in the world-leading technical advisory company HP, Ernst & Young. Her Specilists include: SAP, CRM, FinTech, Digitalmedia.
                         </p>
                         <ul class="list-inline social-1">
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul><!--social-->
@@ -346,7 +407,7 @@
                             David graduated from the prestigious university Oxford as a mathmatics talent. He has been doing big data analysis over 20 years.
                         </p>
                         <ul class="list-inline social-1">
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul><!--social-->
@@ -375,7 +436,7 @@
                             Caroline has been consulting in the world-leading technical advisory company HP, Ernst & Young. Her Specilists include: SAP, CRM, FinTech, Digitalmedia.
                         </p>
                         <ul class="list-inline social-1">
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul><!--social-->
@@ -404,7 +465,7 @@
                             David is a mathmatics talent. He graduated from Oxford University major in mathmatics. He has been doing big data analysis over 20 years.
                         </p>
                         <ul class="list-inline social-1">
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul><!--social-->
@@ -415,15 +476,6 @@
                     </div><!--team-wrap-->
                 </div><!--team col-->
             </div>
-
-            <div class="divide60"></div>
-
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <a href="#" class="btn border-theme btn-lg wow animated fadeInUp"><i class="fa fa-bars"></i>Load More Tech Experts</a>
-                </div>
-            </div>
-
         </div><!--team-->
         <div class="divide60"></div>
         <!-- End of Caroline Add Tech Experts into the half-bottom page-->
