--- a/app/views/prices/index_price_backup.html
+++ b/app/views/prices/index_price_backup.html
@@ -168,6 +168,88 @@
                 </div><!--price col-->
             </div><!--row for 3 col-->
 
+
+            <!-- Pricing for Technical Experts - 4-Columns-->
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading">3 Columns</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 margin20 wow animated fadeInRight">
+                    <div class="price-wrap">
+                        <div class="price-title">
+                            <h4>Basic</h4>
+                        </div><!--price title-->
+                        <div class="price-price">
+                            $9.99
+                            <span>Per Month</span>
+                        </div><!--price price-->
+                        <div class="price-features">
+                            <ul class="list-unstyled">
+                                <li>Full Support</li>
+                                <li>5 Email account</li>
+                                <li>50 GB disk space</li>
+                                <li>1 year validity</li>
+                                <li>Phone / email support</li>
+                            </ul>
+                        </div><!--price features-->
+                        <div class="price-action">
+                            <a href="#" class="btn btn-theme-dark">Choose plan</a>
+                        </div><!--price action-->
+                    </div><!--price-wrap-->
+                </div><!--price col-->
+                <div class="col-md-4 margin20 wow animated fadeInRight">
+                    <div class="price-wrap">
+                        <div class="price-title">
+                            <h4>Business</h4>
+                        </div><!--price title-->
+                        <div class="price-price popular">
+                            $29.99
+                            <span>Per Month</span>
+                        </div><!--price price-->
+                        <div class="price-features">
+                            <ul class="list-unstyled">
+                                <li>Full Support</li>
+                                <li>5 Email account</li>
+                                <li>50 GB disk space</li>
+                                <li>1 year validity</li>
+                                <li>Phone / email support</li>
+                            </ul>
+                        </div><!--price features-->
+                        <div class="price-action">
+                            <a href="#" class="btn btn-theme-bg">Choose plan</a>
+                        </div><!--price action-->
+                    </div><!--price-wrap-->
+                </div><!--price col-->
+                <div class="col-md-4 margin20 wow animated fadeInRight">
+                    <div class="price-wrap">
+                        <div class="price-title">
+                            <h4>Professional</h4>
+                        </div><!--price title-->
+                        <div class="price-price">
+                            $49.99
+                            <span>Per Month</span>
+                        </div><!--price price-->
+                        <div class="price-features">
+                            <ul class="list-unstyled">
+                                <li>Full Support</li>
+                                <li>5 Email account</li>
+                                <li>50 GB disk space</li>
+                                <li>1 year validity</li>
+                                <li>Phone / email support</li>
+                            </ul>
+                        </div><!--price features-->
+                        <div class="price-action">
+                            <a href="#" class="btn btn-theme-dark">Choose plan</a>
+                        </div><!--price action-->
+                    </div><!--price-wrap-->
+                </div><!--price col-->
+
+            </div><!--row for 3 col-->
+            <div class="divide40"></div>
+            <!-- End of Pricing for Technical Experts - 4-Column-->
+            
             <!-- Pricing for Technical Experts - 3-Columns-->
             <div class="divide80"></div>
             <div class="row">
