15th version busters page done

--- a/app/views/busters/index_buster.html
+++ b/app/views/busters/index_buster.html
@@ -123,12 +123,14 @@
                                   <a href="#" title="">Caroline Gao</a>
                               </td>
                               <td>
+                                  <!--Bug Numbers cannot be input display
                                   <form class="form">
                                       <input type="number" class="input-sm" style="width: 60px;" min="1" max="25" value="60">
-                                  </form>
+                                  </form>-->
+                                  <i class="fa fa-bolt"></i> 90
                               </td>
                               <td>
-                                  $24,000.00
+                                  $36,000.00
                               </td>
                               <td>
                                   <ul class="list-inline rating-list">
@@ -148,12 +150,10 @@
                                   <a href="#" title="">David Stapleton</a>
                               </td>
                               <td>
-                                  <form>
-                                      <input type="number" class="input-sm" style="width: 60px;" min="1" max="25" value="50">
-                                  </form>
+                                  <i class="fa fa-bolt"></i> 60
                               </td>
                               <td>
-                                  $36,000.00
+                                  $24,000.00
                               </td>
                               <td>
                                   <ul class="list-inline rating-list">
@@ -172,9 +172,7 @@
                                   <a href="#" title="">Caroline Gao</a>
                               </td>
                               <td>
-                                  <form class="form">
-                                      <input type="number" class="input-sm" style="width: 60px;" min="1" max="25" value="50">
-                                  </form>
+                                  <i class="fa fa-bolt"></i> 50
                               </td>
                               <td>
                                   $24,000.00
@@ -197,9 +195,7 @@
                                   <a href="#" title="">David Stapleton</a>
                               </td>
                               <td>
-                                  <form>
-                                      <input type="number" class="input-sm" style="width: 60px;" min="1" max="25" value="30">
-                                  </form>
+                                  <i class="fa fa-bolt"></i> 30
                               </td>
                               <td>
                                   $36,000.00
@@ -219,9 +215,7 @@
                                   <a href="#" title="">Caroline Gao</a>
                               </td>
                               <td>
-                                  <form class="form">
-                                      <input type="number" class="input-sm" style="width: 60px;" min="1" max="25" value="30">
-                                  </form>
+                                  <i class="fa fa-bolt"></i> 30
                               </td>
                               <td>
                                   $24,000.00
@@ -238,12 +232,10 @@
                                   <a href="#" title="">David Stapleton</a>
                               </td>
                               <td>
-                                  <form>
-                                      <input type="number" class="input-sm" style="width: 60px;" min="1" max="25" value="30">
-                                  </form>
+                                  <i class="fa fa-bolt"></i> 20
                               </td>
                               <td>
-                                  $36,000.00
+                                  $12,000.00
                               </td>
                               <td>
                                   <a href=""><i class="fa fa-heartbeat"></i> </a>
