--- a/app/views/testpages/index_testpage.html.erb
+++ b/app/views/testpages/index_testpage.html.erb
@@ -1,1 +1,9 @@
-<h1>This page is for testing page contents.</h1>
+<h1>This page is a collection of the common html syntax.</h1>
+
+<!-- Input Form -->
+
+<form>
+    <input type="number" class="input-sm" style="width: 60px;" min="1" max="25" value="30">
+</form>
+
+<!-- End of Input Form -->
