--- a/app/views/processes/index_process.html.erb
+++ b/app/views/processes/index_process.html.erb
@@ -48,6 +48,13 @@
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 
+        <!-- 12-11-2015 Cat Add link for awesome font not working on heroku-->
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+        <!-- End of Cat Add link for awesome font not working on heroku-->
+
+
     </head>
     <body>
 
