16th version-fixed the font display on heroku

--- a/app/views/faqs/index_faq.html.erb
+++ b/app/views/faqs/index_faq.html.erb
@@ -44,6 +44,10 @@
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 
+        <!-- 12-11-2015 Cat Add link for awesome font not working on heroku and fixed-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <!-- End of Cat Add link for awesome font not working on heroku-->
+
     </head>
     <body>
 
@@ -209,7 +213,7 @@
             </div>
         </div>
         <div class="divide60"></div>
-        
+
         <!--scripts and plugins -->
         <!--must need plugin jquery-->
         <script src="js/jquery.min.js"></script>
