--- a/app/views/prices/index_price_backup.html
+++ b/app/views/prices/index_price_backup.html
@@ -43,6 +43,9 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <!-- 12-11-2015 Cat Add link for awesome font not working on heroku and fixed-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <!-- End of Cat Add link for awesome font not working on heroku-->
 
     </head>
     <body>
@@ -249,7 +252,7 @@
             </div><!--row for 3 col-->
             <div class="divide40"></div>
             <!-- End of Pricing for Technical Experts - 4-Column-->
-            
+
             <!-- Pricing for Technical Experts - 3-Columns-->
             <div class="divide80"></div>
             <div class="row">
