--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2244,6 +2244,18 @@ ul.post-desc li + li{
     background-color: #ea4c89;
 }
 
+.social-1 li a i.fa-linkedin{
+    background-color: #0084b4;
+}
+
+.social-1 li a i.fa-instagram{
+    background-color: #cb2027;
+}
+
+.social-1 li a i.fa-weixin{
+    background-color: #00CC00;
+}
+
 
 
 /**************coming soon*************/
