change techexpert page asset css link

--- a/app/views/techexperts/index_techexpert.html.erb
+++ b/app/views/techexperts/index_techexpert.html.erb
@@ -9,7 +9,8 @@
         <!-- Bootstrap -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- custom css (blue color by default) -->
-        <link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
+        <!--<link href="css/style.css" rel="stylesheet" type="text/css" media="screen">-->
+        <%= stylesheet_link_tag  '/style.css', media: 'screen', type="text/css" 'data-turbolinks-track' => true %>
         <!-- custom css (green color ) -->
         <!--      <link href="css/style-green.css" rel="stylesheet" type="text/css" media="screen">-->
         <!-- custom css (red color ) -->
