17version finished aboutus page board member style

--- a/app/views/aboutus/index_aboutus_version1.html
+++ b/app/views/aboutus/index_aboutus_version1.html
@@ -202,7 +202,6 @@
         <div class="divide60"></div>
 
         <div class="container">
-            <!-- Leading Team Members-->
             <div class="row">
                 <div class="col-md-12">
                     <div class="center-heading">
@@ -212,104 +211,76 @@
                     </div><!--center-heading-->
                 </div>
             </div>
-
-            <div class="container-about-board-member">
-              <div class="row">
-                <div class="col-md-3 margin20">
-                </div>
-                <div class="col-md-3 margin20">
-                   <img src="<%= asset_path "customer-3.jpg" %>" class= "img-circle img-responsive board-member-img" style="width:130px; height:130px;" alt="">
-                   <br>
-                   <h4>Caroline Gao</h4>
-                   <h6>Founder & Chief Fire Starter</h6>
-                   <ul class="list-inline social-1">
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                   </ul>
-                </div>
-
-                <div class="col-md-3 margin20">
-                   <img src="<%= asset_path "customer-1.jpg" %>" class= "img-circle img-responsive" style="width:130px; height:130px;" alt="">
-                   <br>
-                   <h4>David Stapleton</h4>
-                   <h6>Founder & Chief Buster</h6>
-                   <ul class="list-inline social-1">
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                   </ul>
-                </div>
-
-                <div class="col-md-3 margin20">
-                </div>
-              </div>
-            </div>
-
-            <!-- End of Leading Team Members-->
-
-          <!-- #######  Advisors Section Start Here ########### >
-
             <div class="row">
-                <div class="col-md-12">
-                    <div class="center-heading">
-                        <h2>Advisors</h2>
-                        <span class="center-line"></span>
+                <div class="col-md-3 margin20">
+                    <div class="team-wrap">
+                        <img src="<%= asset_path "team-1.jpg" %>" class="img-responsive" alt="">
+                        <h4>Caroline Gao</h4>
+                        <span>Founder & Cheif Fire Starter</span>
+                        <h4>Tagline: Big dreamer and diligent doer; Keep calm and dig deeper.</h4>
+                        <p>
+                            I describe myself a big dreamer; a visionary thinker and a diligent doer. Came from a technical background, working for 9 years as a senior IT consultant and software engineer in world-leading companies.
+                        </p>
+                        <p>
+                          Bragging rights
+                          Aim to build houses for homeless old people around the world. Will try my best to give my contribution.
+                        </p>
+                        <ul class="list-inline social-1">
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        </ul><!--social-->
+                    </div><!--team-wrap-->
+                </div><!--team col-->
+                <div class="col-md-3 margin20">
+                    <div class="team-wrap">
+                        <img src="<%= asset_path "team-2.jpg" %>" class="img-responsive" alt="">
+                        <h4>David Stapleton</h4>
+                        <span>Founder & Cheif Buster</span>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis
+                        </p>
+                        <ul class="list-inline social-1">
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        </ul><!--social-->
+                    </div><!--team-wrap-->
+                </div><!--team col-->
+
+                <div class="col-md-3 margin20">
+                    <div class="team-wrap">
+                        <img src="<%= asset_path "team-3.jpg" %>" class="img-responsive" alt="">
+                        <h4>Jolly smith</h4>
+                        <span>Web Designer</span>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis
+                        </p>
+                        <ul class="list-inline social-1">
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        </ul><!--social-->
+                    </div><!--team-wrap-->
+                </div><!--team col-->
+                <div class="col-md-3 margin20">
+                    <div class="team-wrap">
+                        <img src="<%= asset_path "team-4.jpg" %>" class="img-responsive" alt="">
+                        <h4>Jolly smith</h4>
+                        <span>Web Designer</span>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis
+                        </p>
+                        <ul class="list-inline social-1">
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        </ul>
                     </div>
                 </div>
+
             </div>
-
-            <div class="container-about-board-member">
-              <div class="row">
-                <div class="col-md-4 margin20">
-                  <img src="<%= asset_path "customer-1-old.jpg" %>" class= "img-circle img-responsive" style="width:130px; height:130px;" alt="">
-                  <h4>Caroline Gao</h4>
-                  <h5>Founder & Chief Fire Starter</h5>
-                  <h5>Bragging rights:</h5>
-                  <p>
-                    Aim to build houses for homeless old people around the world. Will try my best to give my contribution.
-                  </p>
-                </div>
-
-                <div class="col-md-4 margin20">
-                  <img src="<%= asset_path "customer-2-old.jpg" %>" class= "img-circle img-responsive" style="width:130px; height:130px;" alt="">
-                  <h4>Caroline Gao</h4>
-                  <h5>Founder & Chief Fire Starter</h5>
-                  <h5>Bragging rights:</h5>
-                  <p>
-                    Aim to build houses for homeless old people around the world. Will try my best to give my contribution.
-                  </p>
-                </div>
-
-                <div class="col-md-4 margin20">
-                  <img src="<%= asset_path "customer-3-old.jpg" %>" class= "img-circle img-responsive" style="width:130px; height:130px;" alt="">
-                  <h4>Caroline Gao</h4>
-                  <h5>Founder & Chief Fire Starter</h5>
-                  <h5>Bragging rights:</h5>
-                  <p>
-                    Aim to build houses for homeless old people around the world. Will try my best to give my contribution.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-          <#######   End of Advisors   ########################-->
-
-            <!-- Team Members -->
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="center-heading">
-                        <h2>Team Members</h2>
-                        <span class="center-line"></span>
-                        <p class="lead">We welcome passionate people to <a href="/career/index">join us</a> and work together to make people's lives better.</p>
-                    </div><!--center-heading-->
-                </div>
-            </div>
-
-            <!-- End of Team Members-->
-
         </div><!--team-->
-
         <div class="divide60"></div>
 
        <!--scripts and plugins -->
