--- a/app/views/testpages/index_testpage.html.erb
+++ b/app/views/testpages/index_testpage.html.erb
@@ -1,13 +1,32 @@
 <h1>This page is a collection of the common html syntax.</h1>
 
-<!-- Input Form -->
-
+<!-- Input Form
 <form>
     <input type="number" class="input-sm" style="width: 60px;" min="1" max="25" value="30">
 </form>
+-->
 
 <!-- End of Input Form -->
 
-<!-- 12-11-2015 Cat Add link for awesome font not working on heroku and fixed-->
+<!-- 12-11-2015 Cat Add link for awesome font not working on heroku and fixed >
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<!-- End of Cat Add link for awesome font not working on heroku-->
+<! End of Cat Add link for awesome font not working on heroku-->
+
+<!-- Let one column display in the right side or left side, use float
+.rightColumn{
+  float:right;
+} -->
+
+<!-- Change font size in HTML
+<p style="font-size:3px">Founder & Chief Fire Starter</p>
+-->
+
+<!-- text-align: center in HTML >
+<h5 style="text-align: center">Caroline Gao</h5>
+-->
+
+<!-- Several HTML element to change CSS stylesheet together >
+.col-md-3 h4, h5, h6, p{
+  text-align: center;
+}
+-->
