--- a/app/assets/stylesheets/aboutus.scss
+++ b/app/assets/stylesheets/aboutus.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the aboutus controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.container-about-board-member {
+  padding-top: 10px;
+  padding-bottom: 75px;
+  max-width: 980px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
