--- a/app/views/blogs/index_blog.html.erb
+++ b/app/views/blogs/index_blog.html.erb
@@ -45,9 +45,9 @@
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-        <!-- 12-11-2015 Cat Add link for awesome font not working on heroku and fixed>
+        <!-- 12-11-2015 Cat Add link for awesome font not working on heroku and fixed-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-        <! End of Cat Add link for awesome font not working on heroku-->
+        <!-- End of Cat Add link for awesome font not working on heroku-->
 
     </head>
     <body>
